Add functionality to save inputs in localStorage
- WAM for each subject is saved on the front end (in an array), then
saved to the browser's localStorage and redisplayed on browser load.

- Each raw mark input and weight is saved in their front end arrays,
then saved to localStorage and redisplayed on browser load.

--- a/index.html
+++ b/index.html
@@ -14,84 +14,84 @@
         <div class="subject1">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject1 raw ass1" type="number" placeholder="raw%">
+                <input id="subject1 weight ass1" type="number" placeholder="weight%">
+                <input id="subject1 raw ass2" type="number" placeholder="raw%">
+                <input id="subject1 weight ass2" type="number" placeholder="weight%">
+                <input id="subject1 raw ass3" type="number" placeholder="raw%">
+                <input id="subject1 weight ass3" type="number" placeholder="weight%">
+                <input id="subject1 raw ass4" type="number" placeholder="raw%">
+                <input id="subject1 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject2">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject2 raw ass1" type="number" placeholder="raw%">
+                <input id="subject2 weight ass1" type="number" placeholder="weight%">
+                <input id="subject2 raw ass2" type="number" placeholder="raw%">
+                <input id="subject2 weight ass2" type="number" placeholder="weight%">
+                <input id="subject2 raw ass3" type="number" placeholder="raw%">
+                <input id="subject2 weight ass3" type="number" placeholder="weight%">
+                <input id="subject2 raw ass4" type="number" placeholder="raw%">
+                <input id="subject2 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject3">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject3 raw ass1" type="number" placeholder="raw%">
+                <input id="subject3 weight ass1" type="number" placeholder="weight%">
+                <input id="subject3 raw ass2" type="number" placeholder="raw%">
+                <input id="subject3 weight ass2" type="number" placeholder="weight%">
+                <input id="subject3 raw ass3" type="number" placeholder="raw%">
+                <input id="subject3 weight ass3" type="number" placeholder="weight%">
+                <input id="subject3 raw ass4" type="number" placeholder="raw%">
+                <input id="subject3 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject4">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject4 raw ass1" type="number" placeholder="raw%">
+                <input id="subject4 weight ass1" type="number" placeholder="weight%">
+                <input id="subject4 raw ass2" type="number" placeholder="raw%">
+                <input id="subject4 weight ass2" type="number" placeholder="weight%">
+                <input id="subject4 raw ass3" type="number" placeholder="raw%">
+                <input id="subject4 weight ass3" type="number" placeholder="weight%">
+                <input id="subject4 raw ass4" type="number" placeholder="raw%">
+                <input id="subject4 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject5">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject5 raw ass1" type="number" placeholder="raw%">
+                <input id="subject5 weight ass1" type="number" placeholder="weight%">
+                <input id="subject5 raw ass2" type="number" placeholder="raw%">
+                <input id="subject5 weight ass2" type="number" placeholder="weight%">
+                <input id="subject5 raw ass3" type="number" placeholder="raw%">
+                <input id="subject5 weight ass3" type="number" placeholder="weight%">
+                <input id="subject5 raw ass4" type="number" placeholder="raw%">
+                <input id="subject5 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject6">
             <div class="subjectName"></div>
             <div class="inputs">
-                <input id="raw ass1" type="number" placeholder="raw%">
-                <input id="weight ass1" type="number" placeholder="weight%">
-                <input id="raw ass2" type="number" placeholder="raw%">
-                <input id="weight ass2" type="number" placeholder="weight%">
-                <input id="raw ass3" type="number" placeholder="raw%">
-                <input id="weight ass3" type="number" placeholder="weight%">
-                <input id="raw ass4" type="number" placeholder="raw%">
-                <input id="weight ass4" type="number" placeholder="weight%">
+                <input id="subject6 raw ass1" type="number" placeholder="raw%">
+                <input id="subject6 weight ass1" type="number" placeholder="weight%">
+                <input id="subject6 raw ass2" type="number" placeholder="raw%">
+                <input id="subject6 weight ass2" type="number" placeholder="weight%">
+                <input id="subject6 raw ass3" type="number" placeholder="raw%">
+                <input id="subject6 weight ass3" type="number" placeholder="weight%">
+                <input id="subject6 raw ass4" type="number" placeholder="raw%">
+                <input id="subject6 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
         </div>
