Fix bug causing incorrect WAM calculation (NaN)
- (context) Input fields that were full, then deleted to become empty, took on a
value of "", which when converted to an integer with parseInt, became
NaN, ensuring that future storing and calculations with that input
defaulted to 0 (due to the NaN remover function).

- Fix ensures that these deleted inputs take on a value of 0, bypassing
the parseInt function.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <select name="sub" id="nig">
+        <option value="mathext2">mathematics extension 2</option>
+        <option value="mathsext1">mathematics extension 1</option>
+    </select>
+
+
     <div class="rawmarksInput">
         <div class="subject1">
             <div class="subjectName"></div>
