--- a/index.html
+++ b/index.html
@@ -6,19 +6,33 @@
     <title>Atar Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="atarcalc.js" defer></script>
+    <!-- <link rel="icon" href="atarcalcfavicon.png"> -->
 </head>
 
 <body>
 
-    <select name="sub" id="nig">
-        <option value="mathext2">mathematics extension 2</option>
-        <option value="mathsext1">mathematics extension 1</option>
-    </select>
-
-
     <div class="rawmarksInput">
         <div class="subject1">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub1">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject1 raw ass1" type="number" placeholder="raw%">
                 <input id="subject1 weight ass1" type="number" placeholder="weight%">
@@ -32,7 +46,26 @@
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject2">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub2">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject2 raw ass1" type="number" placeholder="raw%">
                 <input id="subject2 weight ass1" type="number" placeholder="weight%">
@@ -46,7 +79,26 @@
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject3">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub3">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject3 raw ass1" type="number" placeholder="raw%">
                 <input id="subject3 weight ass1" type="number" placeholder="weight%">
@@ -60,7 +112,26 @@
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject4">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub4">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject4 raw ass1" type="number" placeholder="raw%">
                 <input id="subject4 weight ass1" type="number" placeholder="weight%">
@@ -74,7 +145,26 @@
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject5">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub5">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject5 raw ass1" type="number" placeholder="raw%">
                 <input id="subject5 weight ass1" type="number" placeholder="weight%">
@@ -88,7 +178,26 @@
             <div class="wam">WAM: 0</div>
         </div>
         <div class="subject6">
-            <div class="subjectName"></div>
+            <select name="subjectselector" id="sub6">
+                <option value="mathsstd">Maths (Standard)</option>
+                <option value="mathsadv">Maths (Advanced)</option>
+                <option value="mathsext1">Maths Ext 1</option>
+                <option value="mathext2">Maths Ext 2</option>
+                <option value="biology">Biology</option>
+                <option value="chemistry">Chemistry</option>
+                <option value="physics">Physics</option>
+                <option value="englishstd">English (Standard)</option>
+                <option value="englishadv">English (Advanced)</option>
+                <option value="englishext1">English Ext 1</option>
+                <option value="englishext2">English Ext 2</option>
+                <option value="economics">Economics</option>
+                <option value="business">Business Studies</option>
+                <option value="legal">Legal Studies</option>
+                <option value="modernhis">Modern History</option>
+                <option value="ancienthis">Ancient History</option>
+                <option value="sdd">SDD</option>
+                <option value="engineering">Engineering Studies</option>
+            </select>
             <div class="inputs">
                 <input id="subject6 raw ass1" type="number" placeholder="raw%">
                 <input id="subject6 weight ass1" type="number" placeholder="weight%">
