Add raw to aligned converter for select subjects:
- ext1&2 maths, chem, phys, bio, english adv now have convertions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -49,7 +49,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -82,7 +82,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -115,7 +115,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -148,7 +148,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -181,7 +181,7 @@
                 <option value="mathsstd">Maths (Standard)</option>
                 <option value="mathsadv">Maths (Advanced)</option>
                 <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathext2">Maths Ext 2</option>
+                <option value="mathsext2">Maths Ext 2</option>
                 <option value="biology">Biology</option>
                 <option value="chemistry">Chemistry</option>
                 <option value="physics">Physics</option>
@@ -208,6 +208,27 @@
                 <input id="subject6 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+        </div>
+    </div>
+    <div class="alignedmarks">
+        these are the aligned marks:
+        <div class="aligned1">
+
+        </div>
+        <div class="aligned2">
+
+        </div>
+        <div class="aligned3">
+
+        </div>
+        <div class="aligned4">
+
+        </div>
+        <div class="aligned5">
+
+        </div>
+        <div class="aligned6">
+            
         </div>
     </div>
 </body>
