show aligned marks under each subject

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <input id="subject1 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 1">Aligned: 0</div>
         </div>
         <div class="subject2">
             <select name="subjectselector" id="sub2">
@@ -76,6 +77,7 @@
                 <input id="subject2 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 2">Aligned: 0</div>
         </div>
         <div class="subject3">
             <select name="subjectselector" id="sub3">
@@ -109,6 +111,7 @@
                 <input id="subject3 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 3">Aligned: 0</div>
         </div>
         <div class="subject4">
             <select name="subjectselector" id="sub4">
@@ -142,6 +145,7 @@
                 <input id="subject4 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 4">Aligned: 0</div>
         </div>
         <div class="subject5">
             <select name="subjectselector" id="sub5">
@@ -175,6 +179,7 @@
                 <input id="subject5 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 5">Aligned: 0</div>
         </div>
         <div class="subject6">
             <select name="subjectselector" id="sub6">
@@ -208,28 +213,16 @@
                 <input id="subject6 weight ass4" type="number" placeholder="weight%">
             </div>
             <div class="wam">WAM: 0</div>
+            <div class="aligned 6">Aligned: 0</div>
         </div>
     </div>
-    <div class="alignedmarks">
-        these are the aligned marks:
-        <div class="aligned1">
-
-        </div>
-        <div class="aligned2">
-
-        </div>
-        <div class="aligned3">
-
-        </div>
-        <div class="aligned4">
-
-        </div>
-        <div class="aligned5">
-
-        </div>
-        <div class="aligned6">
-            
-        </div>
+    </div>
+    <div class="supportedsubjects">
+        The supported subjects for the raw-aligned conversion are (currently): 
+        Maths ext1, maths ext2, physics, bio, chemistry, & english advanced.
+        <br>
+        <br>
+        More to be updated soon.
     </div>
 </body>
 </html>
