--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 1">Aligned: 0</div>
+                <div class="band 1">Band 0</div>
             </div>
             <div class="subject2">
                 <select name="subjectselector" id="sub2">
@@ -89,6 +90,7 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 2">Aligned: 0</div>
+                <div class="band 2">Band 0</div>
             </div>
             <div class="subject3">
                 <select name="subjectselector" id="sub3">
@@ -123,6 +125,7 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 3">Aligned: 0</div>
+                <div class="band 3">Band 0</div>
             </div>
             <div class="subject4">
                 <select name="subjectselector" id="sub4">
@@ -157,6 +160,7 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 4">Aligned: 0</div>
+                <div class="band 4">Band 0</div>
             </div>
             <div class="subject5">
                 <select name="subjectselector" id="sub5">
@@ -191,6 +195,7 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 5">Aligned: 0</div>
+                <div class="band 5">Band 0</div>
             </div>
             <div class="subject6">
                 <select name="subjectselector" id="sub6">
@@ -225,15 +230,19 @@
                 </div>
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 6">Aligned: 0</div>
+                <div class="band 6">Band 0</div>
             </div>
         </div>
     </div>
     <div class="supportedsubjects">
         The supported subjects for the raw-aligned conversion are (currently): 
-        Maths ext1, maths ext2, physics, bio, chemistry, & english advanced.
+        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and tech, engineering & english advanced.
         <br>
         <br>
-        More to be updated soon.
+        More to be supported soon.
+        <br>
+        <br>
+        Aligned marks are calculated based on data from 2023 (N.B. 2022 in the case of low datasets), and in no way can predict the difficulty of upcoming year's HSC papers. Take this as a guide only. 
     </div>
 </body>
 </html>
