Add scaled mark support for (most) subjects
- also viewable per subject (out of 100)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 1">Aligned: 0</div>
                 <div class="band 1">Band 0</div>
+                <div class="scaled 1">Scaled: 0</div>
             </div>
             <div class="subject2">
                 <select name="subjectselector" id="sub2">
@@ -91,6 +92,7 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 2">Aligned: 0</div>
                 <div class="band 2">Band 0</div>
+                <div class="scaled 2">Scaled: 0</div>
             </div>
             <div class="subject3">
                 <select name="subjectselector" id="sub3">
@@ -126,6 +128,7 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 3">Aligned: 0</div>
                 <div class="band 3">Band 0</div>
+                <div class="scaled 3">Scaled: 0</div>
             </div>
             <div class="subject4">
                 <select name="subjectselector" id="sub4">
@@ -161,6 +164,7 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 4">Aligned: 0</div>
                 <div class="band 4">Band 0</div>
+                <div class="scaled 4">Scaled: 0</div>
             </div>
             <div class="subject5">
                 <select name="subjectselector" id="sub5">
@@ -196,6 +200,7 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 5">Aligned: 0</div>
                 <div class="band 5">Band 0</div>
+                <div class="scaled 5">Scaled: 0</div>
             </div>
             <div class="subject6">
                 <select name="subjectselector" id="sub6">
@@ -231,14 +236,17 @@
                 <div class="wam">WAM: 0</div>
                 <div class="aligned 6">Aligned: 0</div>
                 <div class="band 6">Band 0</div>
+                <div class="scaled 6">Scaled: 0</div>
             </div>
         </div>
     </div>
     <div class="supportedsubjects">
         The supported subjects for the raw-aligned conversion are (currently): 
-        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and tech, engineering & english advanced.
+        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and development, engineering & english advanced.
         <br>
         <br>
+        The supported subjects for scaled marks are (currently):
+        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, english adv, economics, business studies, legal studies, modern & ancient history, software design and development and 
         More to be supported soon.
         <br>
         <br>
