Add aggregate calculation & atar calculation
- aggregate is calculated from adding all scaled marks
- atar is calculated through piecewise polynomials using data
from NESA scaling report
- atar is displayed and rounded to nearest 0.05

--- a/index.html
+++ b/index.html
@@ -239,18 +239,25 @@
                 <div class="scaled 6">Scaled: 0</div>
             </div>
         </div>
+        <div class="atar">Atar: 0</div>
     </div>
+
+
     <div class="supportedsubjects">
-        The supported subjects for the raw-aligned conversion are (currently): 
+        The supported subjects for both aligned and scaled marks are (currently): 
         Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and development, engineering & english advanced.
         <br>
         <br>
-        The supported subjects for scaled marks are (currently):
-        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, english adv, economics, business studies, legal studies, modern & ancient history, software design and development and 
-        More to be supported soon.
+        Aligned and scaled marks are calculated based on data from 2023 (N.B. 2022 in the case of low datasets), and in no way can predict the difficulty of upcoming year's HSC papers. 
         <br>
         <br>
-        Aligned marks are calculated based on data from 2023 (N.B. 2022 in the case of low datasets), and in no way can predict the difficulty of upcoming year's HSC papers. Take this as a guide only. 
+        The "WAM" that NESA uses is an equal weighting of your raw mark from each HSC exam, and the HSC mark of the person who ranked <em>your</em> internal rank for your four assessments, in the HSC. 
+        <br>
+        <br>
+        E.g. Steve achieved an internal rank of 5th/60 in physics at his school. He scored a raw mark of 90% in his HSC physics exam, which will be his external mark (once scaling factors have been applied). Bob, who out of the 60 physics students, ranked 5th in the actual HSC exam, scored a raw mark of 80%. As Steve ranked 5th internally, his internal mark is equal to the mark that the ranked 5th externally student (Bob), scored in his HSC exam (80%). Thus, Steve's final mark to NESA (before alignment and scaling etc) is 85% (the average of 90%, his internal mark, and 80%, his external mark). Consider this when inputting marks.
+        <br>
+        <br>
+        Take this calculator as a guide only. 
     </div>
 </body>
 </html>
