Add toggle adv mode button

--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
         <a href="https://github.com/saysayyyy07/atarcalculator/issues" class="header feedback">Feedback</a>
     </header>
     <div class="rawmarkscontainer">
-        <div class="tooltip">
-            <span class="tooltiptext">
-                Weighted Average Mean (WAM): calculating your average mark, considering the weighting of each assessment. 
-                <br> <br>
-                Aligned marks: NESA's system for standardising your raw marks based on the difficulty of <em>your</em> HSC exam relative to past years.
-                <br> <br>
-                Band: The descriptor that corrrelates to your aligned mark. <a href="https://www.nsw.gov.au/education-and-training/nesa/hsc/results-and-certificates/understanding-your-results/#toc-performance-bands" target=”_blank”>NESA band cutoffs</a>
-        
-            </span>
-            <img src="question mark icon.png" alt="question mark icon" class="questionmark">
+        <div class="toolbar">
+            <button class="advmodetoggle">
+                Toggle advanced mode
+            </button>
+            <div class="tooltip">
+                <span class="tooltiptext">
+                    Weighted Average Mean (WAM): calculating your average mark, considering the weighting of each assessment.
+                    <br> <br>
+                    Aligned marks: NESA's system for standardising your raw marks based on the difficulty of <em>your</em> HSC exam relative to past years.
+                    <br> <br>
+                    Band: The descriptor that corrrelates to your aligned mark. <a href="https://www.nsw.gov.au/education-and-training/nesa/hsc/results-and-certificates/understanding-your-results/#toc-performance-bands" target=”_blank”>NESA band cutoffs</a>
+            
+                </span>
+                <img src="question mark icon.png" alt="question mark icon" class="questionmark">
+            </div>
         </div>
         <div class="rawmarksInput">
             <div class="subject1">
