Limit number of counted units to best 10.
- Ensure best 2 units of english are counted first to
 ensure they contribute to calculations
- Cap the number of units to 10
- Handle edge case where 11 units are inputted, and only the best
10 are necessary
- Update howitworks with an accuracy guarantee given
the set of assumptions

--- a/howitworks.html
+++ b/howitworks.html
@@ -29,7 +29,8 @@
             1. Your performance in the year 12 assessments is an accurate and reliable indicator of how you will perform in the HSC exam.
             <br>
             &nbsp&nbsp&nbsp
-            Your internal assessments may be harder, but are probably going to be easier, than the HSC exam. Keep this in mind when using the calculator.
+            Your internal assessments may be harder, but are probably going to be easier, than the HSC exam. The calculator assumes that you will achieve the same raw mark in your HSC exam as you have over your set of internal assessments.
+            Keep this in mind when using the calculator.
             <br>
             <br>
             2. The difficulty of HSC exams remains similar to the 2023 HSC exams.
@@ -41,6 +42,9 @@
             <br>
             &nbsp&nbsp&nbsp
             This is relevant as your HSC mark that NESA uses is comprised equally of an internal mark, and an external mark, which themselves are closely related to your ranks. This is explained in more detail <a href="https://www.getatomi.com/blog/how-your-hsc-ranks-work-finally" target="_blank">here</a>.
+            <br>
+            <br>
+            The verification and understanding of these assumptions by the user (you) allows for an ATAR estimate with remarkably high accuracy, which depending on the user's pattern of study, will be ± 0.00015 of your actual ATAR.
         </p>
         <h1 class="calculationcontent">
             The calculation
