--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             </div>
             <div class="subject6">
                 <select name="subjectselector" id="sub6">
+                    <option value="deletecourse"></option>
                     <option value="mathsstd">Maths (Standard)</option>
                     <option value="mathsadv">Maths (Advanced)</option>
                     <option value="mathsext1">Maths Ext 1</option>
