--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Atar Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="atarcalc.js" defer></script>
+    <meta name="google-site-verification" content="tbprM7il7dxEwdFQxa30pe-G1GQWrUof5f71ZVZ_94o" />
 </head>
 
 <body>
