--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <div class="aligned 1">Aligned: 0</div>
                 <div class="band 1">Band 0</div>
                 <div class="scaled 1">Scaled: 0</div>
+                <div class="equivalent 1">Atar Equivalent: 0</div>
             </div>
             <div class="subject2">
                 <select name="subjectselector" id="sub2">
@@ -104,6 +105,7 @@
                 <div class="aligned 2">Aligned: 0</div>
                 <div class="band 2">Band 0</div>
                 <div class="scaled 2">Scaled: 0</div>
+                <div class="equivalent 2">Atar Equivalent: 0</div>
             </div>
             <div class="subject3">
                 <select name="subjectselector" id="sub3">
@@ -140,6 +142,7 @@
                 <div class="aligned 3">Aligned: 0</div>
                 <div class="band 3">Band 0</div>
                 <div class="scaled 3">Scaled: 0</div>
+                <div class="equivalent 3">Atar Equivalent: 0</div>
             </div>
             <div class="subject4">
                 <select name="subjectselector" id="sub4">
@@ -176,6 +179,7 @@
                 <div class="aligned 4">Aligned: 0</div>
                 <div class="band 4">Band 0</div>
                 <div class="scaled 4">Scaled: 0</div>
+                <div class="equivalent 4">Atar Equivalent: 0</div>
             </div>
             <div class="subject5">
                 <select name="subjectselector" id="sub5">
@@ -212,6 +216,7 @@
                 <div class="aligned 5">Aligned: 0</div>
                 <div class="band 5">Band 0</div>
                 <div class="scaled 5">Scaled: 0</div>
+                <div class="equivalent 5">Atar Equivalent: 0</div>
             </div>
             <div class="subject6">
                 <select name="subjectselector" id="sub6">
@@ -249,6 +254,7 @@
                 <div class="aligned 6">Aligned: 0</div>
                 <div class="band 6">Band 0</div>
                 <div class="scaled 6">Scaled: 0</div>
+                <div class="equivalent 6">Atar Equivalent: 0</div>
             </div>
         </div>
         <div class="atar">Atar: 0</div>
