--- a/howitworks.html
+++ b/howitworks.html
@@ -108,7 +108,7 @@
         <br>
         <br>
         The supported subjects for both aligned & scaled marks, and ATAR calculation are (currently):
-        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and development, engineering & english advanced.
+        Maths (standard & advanced), maths ext1, maths ext2, physics, bio, chemistry, economics, business studies, legal studies, modern & ancient history, software design and development, engineering & english (standard & advanced).
         <br>
         <br>
         To reiterate, please take this calculator as a guide only. This calculator isn't magic. It's a series of functions and polynomials that attempt to model what your ATAR should look like,
