--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atar Calculator</title>
+    <link rel="icon" href="zoomedinicon.png">
     <link rel="stylesheet" href="styles.css">
     <script src="atarcalc.js" defer></script>
     <meta name="google-site-verification" content="tbprM7il7dxEwdFQxa30pe-G1GQWrUof5f71ZVZ_94o" />
