Add PDHPE support

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
                 </select>
                 <div class="inputs">
                     <input id="subject1 raw ass1" type="number" placeholder="raw%">
@@ -91,6 +92,7 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
                 </select>
                 <div class="inputs">
                     <input id="subject2 raw ass1" type="number" placeholder="raw%">
@@ -128,6 +130,8 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
+
                 </select>
                 <div class="inputs">
                     <input id="subject3 raw ass1" type="number" placeholder="raw%">
@@ -165,6 +169,7 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
                 </select>
                 <div class="inputs">
                     <input id="subject4 raw ass1" type="number" placeholder="raw%">
@@ -202,6 +207,7 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
                 </select>
                 <div class="inputs">
                     <input id="subject5 raw ass1" type="number" placeholder="raw%">
@@ -240,6 +246,7 @@
                     <option value="ancienthis">Ancient History</option>
                     <option value="sdd">SDD</option>
                     <option value="engineering">Engineering Studies</option>
+                    <option value="pdh">PDHPE</option>
                 </select>
                 <div class="inputs">
                     <input id="subject6 raw ass1" type="number" placeholder="raw%">
