--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <a href="index.html" class="header calculator" style="border-bottom: solid;">Atar Calculator</a>
+        <a href="atargraphs.html" class="header graphs">Graphs</a>
         <a href="howitworks.html" class="header howitworks">How it works</a>
         <a href="https://github.com/saysayyyy07/atarcalculator/issues" class="header feedback">Feedback</a>
     </header>
@@ -268,34 +269,5 @@
             </div>
             <div class="atar">Atar: 0</div>
         </div>
-        <div class="graphContainer">
-            <select name="subjectselector" id="graphSubjectSelector">
-                <option value="" selected disabled>Select a subject</option>
-                <option value="mathsstd">Maths (Standard)</option>
-                <option value="mathsadv">Maths (Advanced)</option>
-                <option value="mathsext1">Maths Ext 1</option>
-                <option value="mathsext2">Maths Ext 2</option>
-                <option value="biology">Biology</option>
-                <option value="chemistry">Chemistry</option>
-                <option value="physics">Physics</option>
-                <option value="englishstd">English (Standard)</option>
-                <option value="englishadv">English (Advanced)</option>
-                <option value="englishext1">English Ext 1</option>
-                <option value="englishext2">English Ext 2</option>
-                <option value="economics">Economics</option>
-                <option value="business">Business Studies</option>
-                <option value="legal">Legal Studies</option>
-                <option value="modernhis">Modern History</option>
-                <option value="ancienthis">Ancient History</option>
-                <option value="sdd">SDD</option>
-                <option value="engineering">Engineering Studies</option>
-                <option value="pdh">PDHPE</option>
-            </select>
-            <canvas id="myChart" style="position: relative; height:50vh; width:70vw">
-                
-            </canvas>
-        </div>
-
-
 </body>
 </html>
