Remove .html prefix from URLs

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <a href="index.html" class="header calculator" style="border-bottom: solid;">Atar Calculator</a>
-        <a href="atargraphs.html" class="header graphs">Graphs</a>
-        <a href="howitworks.html" class="header howitworks">How it works</a>
+        <a href="./" class="header calculator" style="border-bottom: solid;">Atar Calculator</a>
+        <a href="./graphs" class="header graphs">Graphs</a>
+        <a href="./howitworks" class="header howitworks">How it works</a>
         <a href="https://github.com/saysayyyy07/atarcalculator/issues" class="header feedback">Feedback</a>
     </header>
         <div class="rawmarkscontainer">
