--- a/graphs.html
+++ b/graphs.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <a href="index.html" class="header calculator">Atar Calculator</a>
-        <a href="atargraphs.html" class="header graphs" style="border-bottom: solid;">Graphs</a>
-        <a href="howitworks.html" class="header howitworks">How it works</a>
+        <a href="./" class="header calculator">Atar Calculator</a>
+        <a href="./graphs" class="header graphs" style="border-bottom: solid;">Graphs</a>
+        <a href="./howitworks" class="header howitworks">How it works</a>
         <a href="https://github.com/saysayyyy07/atarcalculator/issues" target="_blank" class="header feedback">Feedback</a>
     </header>
 
