--- a/howitworks.html
+++ b/howitworks.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="header calculator">Atar Calculator</a>
-        <a href="atargraphs.html" class="header graphs">Graphs</a>
-        <a href="howitworks.html" class="header howitworks" style="border-bottom: solid;">How it works</a>
+        <a href="./" class="header calculator">Atar Calculator</a>
+        <a href="./graphs" class="header graphs">Graphs</a>
+        <a href="./howitworks" class="header howitworks" style="border-bottom: solid;">How it works</a>
         <a href="https://github.com/saysayyyy07/atarcalculator/issues" target="_blank" class="header feedback">Feedback</a>
     </header>
     <div class="main">
