Add atarcalc process flowchart to howitworks

--- a/howitworks.html
+++ b/howitworks.html
@@ -11,6 +11,11 @@
             padding: 0;
             width: 98vw;
         }
+
+        #atarcalcProcess {
+            width: 70vw;
+        }
+
     </style>
 </head>
 <body>
@@ -45,12 +50,16 @@
             This is relevant as your HSC mark that NESA uses is comprised equally of an internal mark, and an external mark, which themselves are closely related to your ranks. This is explained in more detail <a href="https://www.getatomi.com/blog/how-your-hsc-ranks-work-finally" target="_blank">here</a>.
             <br>
             <br>
-            The verification and understanding of these assumptions by the user (you) allows for an ATAR estimate with remarkably high accuracy, which depending on the user's pattern of study, will be ± 0.00015 of your actual ATAR.
+            The verification and understanding of these assumptions by the user (you) allows for an ATAR estimate with remarkably high accuracy, which depending on the user's pattern of study, will be ± 0.15 of your actual ATAR. 
+            <br>
+            <br>
+            Worthy to note, this calculator correctly calculates the aligned -> atar conversion at a higher accuracy than other top-flight atar calculators, such as the Matrix, HSC Ninja, and Talent 100 Atar Calculators. That is, the calculated atar is closer to UAC's estimate (via the UAC atar compass), than these other calculators.
         </p>
         <h1 class="calculationcontent">
             The calculation
         </h1>
         <h3>An overview</h3>
+        <img id="atarcalcProcess" src="atarcalc process.png" alt="procedure for atar calculation diagram">
         <p>
             An outline of the steps used to calculate the atar is as follows:
             <br>
